fix: Change elements color in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,14 +31,9 @@ body {
 }
 
 .pswp__custom-caption {
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to bottom, transparent, rgb(255, 255, 255))
+    rgb(214, 219, 220);
   font-size: 16px;
-  color: #000;
   width: calc(100% - 32px);
   max-width: 400px;
   padding: 2px 8px;
